After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 604821 - Missing ``Since: 2.18'' tag in new GdkWindow functions/properties
Missing ``Since: 2.18'' tag in new GdkWindow functions/properties
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
2.18.x
Other All
: Normal trivial
: ---
Assigned To: gtk-bugs
Michael Emmel
Depends on:
Blocks:
 
 
Reported: 2009-12-17 11:21 UTC by Rafal Luzynski
Modified: 2010-01-03 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing Since: 2.18 tag (1.12 KB, patch)
2009-12-17 18:20 UTC, Javier Jardón (IRC: jjardon)
committed Details | Review
doc for cursor property (989 bytes, patch)
2009-12-20 20:43 UTC, Javier Jardón (IRC: jjardon)
committed Details | Review

Description Rafal Luzynski 2009-12-17 11:21:57 UTC
Following functions have been added in GTK/GDK 2.18.x but have no ``Since: 2.18'' tag in their doc:

gdk_window_get_root_coords
gdk_window_is_destroyed

Also the new "cursor" property has no detailed documentation and the default documentation does not generate the ``Since: 2.18'' tag.

All these symbols are defined in gdkwindow.c.
Comment 1 Javier Jardón (IRC: jjardon) 2009-12-17 18:20:09 UTC
Created attachment 149929 [details] [review]
Add missing Since: 2.18 tag
Comment 2 Murray Cumming 2009-12-18 09:32:19 UTC
Looks fine to me. I think Javier should have general permission to just commit
documentation fixes.
Comment 3 Javier Jardón (IRC: jjardon) 2009-12-18 09:53:50 UTC
Comment on attachment 149929 [details] [review]
Add missing Since: 2.18 tag

commit 674dd557e81f77d2a6fcf7a6e1b87c7ee369a6c6
Comment 4 Javier Jardón (IRC: jjardon) 2009-12-18 09:55:24 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 5 Rafal Luzynski 2009-12-18 11:07:12 UTC
Thank you for your fix, it's a pleasure for me to support the GTK project at least with a bug report. But you have missed the "cursor" property which still has no documentation and thus no Since tag. The doc could be something like:

/**
 * GdkWindow:cursor:
 *
 * The mouse pointer for a #GdkWindow. See gdk_window_set_cursor() for details.
 *
 * Since: 2.18
 */

Sorry, I have not yet set up the GTK+ development environment so I cannot test it or prepare a patch.
Comment 6 Matthias Clasen 2009-12-18 15:30:03 UTC
(In reply to comment #2)
> Looks fine to me. I think Javier should have general permission to just commit
> documentation fixes.


Sure. Javier, feel free to commit trivial documentation fixes like this.
Comment 7 Javier Jardón (IRC: jjardon) 2009-12-18 23:46:47 UTC
(In reply to comment #5)
> Thank you for your fix, it's a pleasure for me to support the GTK project at
> least with a bug report.

Thank you to you for the bug report ;)


> Sorry, I have not yet set up the GTK+ development environment so I cannot test it or prepare a patch.

If you are interested, you can take a look here to make your own patches: http://live.gnome.org/GnomeLove/SubmittingPatches

Regards
Comment 8 Javier Jardón (IRC: jjardon) 2009-12-20 20:43:15 UTC
Created attachment 150130 [details] [review]
doc for cursor property
Comment 9 Rafal Luzynski 2009-12-30 12:03:34 UTC
Javier, thank you for your patches and a hint about making my own ones. Next time I will try to prepare the patch, too. Now we're waiting for the commit of your latest doc.
Comment 10 Javier Jardón (IRC: jjardon) 2010-01-03 20:17:02 UTC
Comment on attachment 150130 [details] [review]
doc for cursor property

Thanks Rafal to remember this.

commit bef70bc5bf73d6c5020f0d606c49321e9d424bd6
Comment 11 Javier Jardón (IRC: jjardon) 2010-01-03 20:17:17 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.